--- a/package.json
+++ b/package.json
@@ -23,11 +23,9 @@
     "url": "https://github.com/anvaka/yaot"
   },
   "dependencies": {
-    "rafor": "^1.0.2"
-  },
-  "devDependencies": {
-    "benchmark": "^1.0.0",
-    "tap": "^1.3.2",
-    "three": "^0.71.0"
+    "benchmark": "^2.1.4",
+    "rafor": "^1.0.2",
+    "tap": "^15.0.10",
+    "three": "^0.133.0"
   }
 }
